tests/ui/sized/recursive-type-coercion-from-never.stderr
error[E0391]: cycle detected when computing layout of `Foo<()>`
  --> $DIR/recursive-type-coercion-from-never.rs:13:1
   |
LL | struct Foo<T: A>(T::Assoc);
   | ^^^^^^^^^^^^^^^^
   |
note: ...which requires computing layout of `<() as A>::Assoc`...
  --> $DIR/recursive-type-coercion-from-never.rs:6:5
   |
LL |     type Assoc;
   |     ^^^^^^^^^^
   = note: ...which again requires computing layout of `Foo<()>`, completing the cycle
note: cycle used when elaborating drops for `main`
  --> $DIR/recursive-type-coercion-from-never.rs:16:1
   |
LL | fn main() {
   | ^^^^^^^^^
   = note: see https://rustc-dev-guide.rust-lang.org/overview.html#queries and https://rustc-dev-guide.rust-lang.org/query.html for more information

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0391`.
